--- a/miguel1-travel/res/values/spinner_currency.xml
+++ b/miguel1-travel/res/values/spinner_currency.xml
@@ -5,7 +5,7 @@
         <item >USD</item>
         <item >EUR</item>
         <item >GBP</item>
-        <item >MEX</item>
+        <item >JPY</item>
         <item >Other</item>
       </string-array>
 </resources>
