--- a/miguel1-travel/res/layout/delete_exp.xml
+++ b/miguel1-travel/res/layout/delete_exp.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:onClick="deleteExp"
         android:text="@string/delete" />
 
 </RelativeLayout>
