--- a/miguel1-travel/res/layout/edit_expense.xml
+++ b/miguel1-travel/res/layout/edit_expense.xml
@@ -125,6 +125,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/Select_exp_edit"
+        android:onClick="editExp"
         android:text="@string/edit" />
 
 </RelativeLayout>
