--- a/miguel1-travel/res/layout/submit_claim.xml
+++ b/miguel1-travel/res/layout/submit_claim.xml
@@ -40,6 +40,7 @@
         android:layout_below="@+id/select_c_sub"
         android:layout_marginLeft="14dp"
         android:layout_marginTop="18dp"
+        android:onClick="submitClaim"
         android:text="@string/submit" />
 
     <TextView
@@ -85,6 +86,7 @@
         android:layout_alignTop="@+id/returned_option"
         android:layout_marginLeft="22dp"
         android:layout_toRightOf="@+id/submit_claim_title"
+        android:onClick="savestatusClaim"
         android:text="@string/save" />
 
 </RelativeLayout>
