--- a/miguel1-travel/res/layout/edit_claim.xml
+++ b/miguel1-travel/res/layout/edit_claim.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -27,15 +28,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/name_of_edit_claim" />
-
-    <TextView
-        android:id="@+id/edit_destination"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/select_edit_claim"
-        android:text="@string/edit_destination"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <EditText
         android:id="@+id/edit_destination_ins"
@@ -105,14 +97,40 @@
         android:ems="10"
         android:inputType="textMultiLine" />
 
+    <TextView
+        android:id="@+id/edit_destination"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/select_edit_claim"
+        android:layout_marginTop="34dp"
+        android:text="@string/edit_destination"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/claimnewname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/edit_reason_ins"
+        android:text="Claim Name" />
+
     <Button
         android:id="@+id/save_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/name_of_edit_claim"
-        android:layout_marginBottom="31dp"
+        android:layout_toRightOf="@+id/edit_reason_ins"
         android:onClick="editClaim"
         android:text="@string/edit" />
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/claimnewname"
+        android:layout_marginTop="18dp"
+        android:ems="10" />
 
 </RelativeLayout>
